# 2DTennisSimulator

./: .gitignore  AGENT_DEV_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  README.md  README_en.md  TASK_LIST.md  __init__.py  ball.py  config.py  debug.py  env.py  field.py  game.py  input_handler.py  main.py  player.py  pyproject.toml  renderer.py  requirements-dev.txt  requirements.txt  run_tests.py  stats_tracker.py
.github/workflows/: ci.yml
agents/: __init__.py  base.py  baseliner.py  chase.py  neural.py  positional.py  random_agent.py  transformer.py
tests/: __init__.py  test_agents.py  test_ball.py  test_cli.py  test_env.py  test_field.py  test_game.py  test_player.py
