[project]
name = "2d-tennis-simulator"
version = "0.1.0"
description = "A 2D tennis simulator with AI agents and Gymnasium integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "pygame>=2.0.0",
    "gymnasium>=0.29.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B027",   # empty method in abstract base class without abstract decorator
    "B904",   # allow raise without from in except
    "B905",   # zip without strict parameter
    "SIM102", # nested if can be combined (sometimes less readable)
    "SIM108", # use ternary operator (can reduce readability)
    "UP006",  # use dict/list/tuple instead of Dict/List/Tuple (Python 3.9 compat)
    "UP035",  # deprecated typing imports (Python 3.9 compat)
    "UP045",  # use X | None instead of Optional[X] (Python 3.9 compat)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["agents"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.ruff_cache
    | __pycache__
    | \.venv
    | venv
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pygame.*",
    "gymnasium.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
